src/app/globals.css
@import "tailwindcss";

:root {
    --background: #a29bfe;
    --foreground: #171717;
}

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --font-sans: var(--font-geist-sans);
    --font-mono: var(--font-geist-mono);
}

body {
    background: var(--background);
    color: var(--foreground);
    font-family: Arial, Helvetica, sans-serif;
}

button, a {
    background-color: #6c5ce7;
    color: white;
    border: none;
    padding: 0.5em 1em;
    border-radius: 0.3em;
    cursor: pointer;
}

input[type="file"]::file-selector-button {
    border: 2px solid #6c5ce7;
    padding: 0.2em 0.4em;
    border-radius: 0.2em;
    background-color: #a29bfe;
    cursor: pointer;
}

/* Converts png to pure white while respecting its transparency */
.white-filter {
    filter: brightness(0) invert(1);
}

.flip-horizontal {
    transform: scaleX(-1);
}

.loading {
    cursor: wait;
}

